[package]
name = "fiat-shamir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.227", features = ["derive"] }
p3-field = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "modular-precompiles" }
p3-challenger = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "modular-precompiles" }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "modular-precompiles" }